changes in yaml for bill
